@@ -6,6 +6,7 @@
 * Updated .travis.yml file.
 * Updated build files and fixed compilation issues.
 * Improved .travis.yml file.
+* Updated .travis.yml file.
 
 SphereSim 3.0.1:
 * Corrected version number.
